src/objects/Intake_Services_Commodity__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of items for which the intake services tracks monthly limits and usage - for example, you get up to 3 boxes of eggs per month.</description>
    <fields>
        <fullName>Allow_Overage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, staff will be alerted when clients use more than the limit, but can choose to overlook the warning.</inlineHelpText>
        <label>Allow Overage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Commodity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Commodity will be managed and show in the Household Commodity section on intake</description>
        <inlineHelpText>Commodity will be managed and show in the Household Commodity section on intake</inlineHelpText>
        <label>Household Commodity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Commodity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Commodity will be managed and show in the Individual Commodity section on intake</description>
        <inlineHelpText>Commodity will be managed and show in the Individual Commodity section on intake</inlineHelpText>
        <label>Individual Commodity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locations__c</fullName>
        <description>Comma separated list of locations</description>
        <inlineHelpText>Comma separated list of locations</inlineHelpText>
        <label>Locations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Limit__c</fullName>
        <label>Monthly Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Intake Services Commodity</label>
</CustomObject>